src/style.css
/* ... */
.grid-item-services.text h2 {
  font-size: 2rem;
  margin-bottom: 20px;
  color: #333; /* Adjust for text color */
}

.grid-item-services.text p {
  font-size: 1.125rem;
  margin-bottom: 20px;
  color: #555; /* Adjust for text color */
}

@media (max-width: 768px) {
  .grid-container-services {
    grid-template-columns: 1fr;
    text-align: center;
  }

  .grid-item-services {
    margin-bottom: 20px; /* Add spacing between image and text */
  }

  .grid-item-services img {
    max-width: 100%; /* Ensure image scales well on smaller screens */
  }
}

.tab-section {
  background-color: white;
  padding-top: 25px;
}

.nav-btn-tab {
  background: none;
}
.nav-link {
  color: black;
}
.nav-pills {
  --bs-nav-pills-border-radius: var(--bs-border-radius);
  --bs-nav-pills-link-active-color: black;
  --bs-nav-pills-link-active-bg: transparent; /* Keep the background transparent */

  /* Center the nav pills */
  display: flex;
  justify-content: center;
}

.nav-pills .nav-link {
  color: #555;
  font-size: 16px;
  border: none;
  border-bottom: 2px solid transparent; /* Default state with no underline */
  background-color: transparent;
  transition: border-color 0.3s ease-in-out, color 0.3s ease-in-out;
  margin-left: 5rem;
  border-bottom: 2px solid #4746468f;
  border-radius: 0px;
}

.nav-pills .nav-link:hover {
  color: #007bff;
  border-bottom: 2px solid #787878;
  border-radius: 0px;
}

.nav-pills .nav-link.active {
  color: black;
  border-bottom: 2px solid #007bff;
  border-radius: 0px;
}
.nav-link:focus,
.nav-link:hover {
  border-bottom: 1 1px solid #007bff;
}
.tab-content-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
  margin-top: 20px;
  justify-content: space-evenly;
  padding: 1rem;
  width: 100%;
}
.tab-paragraph-width {
  padding: 0 1rem;
}

@media (max-width: 1024px) {
  .tab-paragraph-width {
    width: 30%;
  }
}

@media (max-width: 768px) {
  .tab-paragraph-width {
    width: 100%;
    text-align: justify;
  }
  .section2aboutus p {
    padding: 25px;
  }
}

.tab-paragraph {
  flex: 1;
  font-size: 1rem;
  line-height: 1.6;
  color: black;
  font-weight: 500;
}
/* */
.insight-section-herobanner {
  background-image: url("https://images.unsplash.com/photo-1529070538774-1843cb3265df?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"); /* Ensure the path is correct */
  background-size: cover;
  background-position: center;
  background-attachment: fixed; /* This makes the background image fixed */
  height: 100vh;
  display: flex;
  align-items: center;
  padding: 0 50px;
  color: #fff;
  position: relative;
}

.btn-primary-insight:hover {
  background: #205eaa;
}

.swiper-image {
  height: 550px;
}
.overlay-text-insight {
  position: absolute;
  top: 250px;
  left: 30px;
  color: #fff;
  z-index: 2;
  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
}
@media (max-width: 1023px) {
  .latest-news-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100vw;
    gap: 2rem;
  }
}

@media (min-width: 1024px) {
  .latest-news-container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    gap: 2rem;
    padding: 2rem;
  }
}

.mySwiper {
  display: flex;
  flex-direction: column;
  margin-bottom: 25px;
  background-color: white;
  padding: 50px !important;
}
.isight-wrapper {
  background-color: white;
}
.isight-wrapper h1 {
  text-align: start;
  padding-top: 50px;
  margin-left: 15px;
}
.swiper-image-container:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0) 0%,
    rgba(0, 0, 0, 1) 100%
  );
  z-index: 1;
}
.getupdate-number {
  color: white;
  font-size: 4rem;
}
.swiper-image-container {
  overflow: hidden;
  position: relative;
  width: 100%;
  max-width: 450px;
}

.swiper-image {
  transition: transform 1s ease-in-out;
  transform: scale(1.2);
}

.swiper-image-container:hover .swiper-image {
  transform: scale(1);
}
.insight-readmore-cta:before {
  position: absolute;
  content: "";
  height: 2px;
  background: #4e84c4;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  opacity: 0;
  width: 35%;
  bottom: -8px;
  left: 0;
}
.insight-readmore-cta:hover:before {
  opacity: 1;
}

.pt-customer-review-description {
  font-size: 19px;
  text-align: center;
  color: black;
  font-weight: 500;
  /* width: -webkit-fill-available; */
  width: fit-content;
}
.pt-customer-review {
  background-color: #faf9f6;
  text-align: center;
  padding: 100px;
  border-radius: 25px;
  /* width: 500px !important; */
}
.about-cta {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: start;
  background-color: black;
  padding: 2rem;
}

@media (max-width: 459px) {
  .about-cta {
    min-height: 800px !important;
  }
}

@media (min-width: 460px) and (max-width: 1024px) {
  .about-cta {
    min-height: 600px !important;
  }

  .about-cta h1 {
    font-size: 3rem;
  }
}

@media (min-width: 1025px) {
  .about-cta {
    min-height: 500px !important;
  }

  .about-cta h1 {
    font-size: 4rem;
  }
}

.contact-page {
  width: 100%;
  min-height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 2rem;
  background-color: #292929;
}

.contact-container {
  display: flex;
  max-width: 1200px;
  width: 100%;
  background-color: 292929;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  overflow: hidden;
}

.contact-form {
  flex: 1;
  padding: 3rem;
  background-color: white;
}

.contact-title {
  text-align: center;
  margin-bottom: 2rem;
  color: #333;
}

.form-group {
  margin-bottom: 1.5rem;
}

.form-group input,
.form-group textarea {
  width: 100%;
  padding: 0.75rem;
  border: 1px solid #ddd;
  border-radius: 5px;
  font-size: 1rem;
}
/* ... */

